--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-TOKEN=TOKEN_HERE
+TOKEN= OTYxMjEwNjk1Mzk4MDc2NDY4.G74Dt6.LMTbbBMo30GoGfsqRAqdPI9AfJIxv1vZiO6B5E
 
 WELCOME_LEAVE_CHANNEL_ID=CHANNEL_ID_HERE
