--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.7.2",
+		"cheerio": "^1.0.0-rc.12",
 		"discord-html-transcripts": "^3.2.0",
 		"discord.js": "^14.15.2",
 		"dotenv": "^16.0.3",
+		"googleapis": "^140.0.1",
 		"mongoose": "^8.4.0",
 		"ms": "^2.1.3",
 		"node-cron": "^3.0.3",
-		"pretty-ms": "^8.0.0"
+		"pretty-ms": "^8.0.0",
+		"puppeteer": "^22.12.1"
 	}
 }
